--- a/src/drafs/new_fs_method.ipynb
+++ b/src/drafs/new_fs_method.ipynb
@@ -2,22 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from copy import deepcopy\n",
-    "from scipy import stats\n",
-    "import numpy as np\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, make_scorer"
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from sklearn.feature_selection import SequentialFeatureSelector\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +134,7 @@
        "2003-12-31  0.048997  0.000350     0.031326  6.253829 -0.013278  0.032111"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,221 +148,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(48, 6)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = \"SPY\"\n",
-    "k = 3\n",
+    "k = 5\n",
+    "scoring = \"neg_mean_squared_error\"\n",
     "model_wrapper = LinearRegressionWrapper(model_params={'fit_intercept': False})\n",
     "\n",
-    "model = model_wrapper.ModelClass\n",
-    "size_of_fold = len(train_df) // k\n",
-    "features = train_df.columns.difference([target])\n",
-    "score = make_scorer(mean_squared_error)\n",
-    "\n",
-    "# split the data into k folds\n",
-    "folds = []\n",
-    "for i in range(k):\n",
-    "    start = i * size_of_fold\n",
-    "    end = (i + 1) * size_of_fold\n",
-    "    if i == k - 1:\n",
-    "        end = len(train_df)\n",
-    "    fold = train_df.iloc[start:end]\n",
-    "    folds.append(fold)\n",
-    "\n",
-    "# make k combinations 2 by 2 of the folds where order does not matter\n",
-    "combinations = []\n",
-    "for i in range(k):\n",
-    "    for j in range(i + 1, k):\n",
-    "        combinations.append((folds[i], folds[j]))\n",
-    "\n",
-    "# # for each combination, train the model on the first fold and test on the second fold\n",
-    "# pbar = tqdm(total=len(combinations) * len(features))\n",
-    "# for feature in features:\n",
-    "#     print(f\"Feature: {feature}\")\n",
-    "#     for i, (train_fold, test_fold) in enumerate(combinations):\n",
-    "#         pbar.set_description(f\"Feature: {feature} - Fold {i + 1}\")\n",
-    "        \n",
-    "#         train_model_fit = model.fit(train_fold.drop(columns=\"target\"), train_fold[\"target\"])\n",
-    "\n",
-    "\n",
-    "#         # compute the error\n",
-    "#         # print the error"
+    "y = train_df[target]\n",
+    "X = train_df.drop(columns=[target])\n",
+    "forecast_model = model_wrapper.ModelClass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected features: Index(['RPI', 'S&P: indust'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "sfs_cv = SequentialFeatureSelector(forecast_model, scoring=scoring)\n",
+    "sfs_cv.fit(X, y)\n",
+    "\n",
+    "selected_features = sfs_cv.get_support(indices=True)\n",
+    "print(f\"Selected features: {X.columns[selected_features]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature = next(iter(features))\n",
-    "i, (train_fold, test_fold) = next(iter(enumerate(combinations)))\n",
+    "tscv = TimeSeriesSplit(n_splits=k)\n",
+    "sfs_tscv = SequentialFeatureSelector(forecast_model, cv=tscv, scoring=scoring)\n",
+    "fit = sfs_tscv.fit(X, y)\n",
     "\n",
-    "# Prepare the features and target for training\n",
-    "X_train = train_fold.drop(columns=target)\n",
-    "X_train_without_feature = train_fold.drop(columns=[target, feature])\n",
-    "y_train = train_fold[target]\n",
-    "\n",
-    "# Prepare the features for testing\n",
-    "X_test = test_fold.drop(columns=target)\n",
-    "# X_test_without_feature = test_fold.drop(columns=[target, feature])\n",
-    "y_test = test_fold[target]\n",
-    "\n",
-    "model_with_feature = model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature = next(iter(features))\n",
-    "all_generalization_errors_with_feature = []\n",
-    "all_generalization_errors_without_feature = []\n",
-    "for i, (train_fold, test_fold) in enumerate(combinations):\n",
-    "\n",
-    "    model1 = deepcopy(model)\n",
-    "    model2 = deepcopy(model)\n",
-    "\n",
-    "    # Prepare the features and target for training\n",
-    "    X_train = train_fold.drop(columns=target)\n",
-    "    X_train_without_feature = train_fold.drop(columns=[target, feature])\n",
-    "    y_train = train_fold[target]\n",
-    "\n",
-    "    # Prepare the features for testing\n",
-    "    X_test = test_fold.drop(columns=target)\n",
-    "    X_test_without_feature = test_fold.drop(columns=[target, feature])\n",
-    "    y_test = test_fold[target]\n",
-    "\n",
-    "    # Fit the model\n",
-    "    model_with_feature = model1.fit(X_train, y_train)\n",
-    "    model_without_feature = model2.fit(X_train_without_feature, y_train)\n",
-    "\n",
-    "    # Predictions for the model\n",
-    "    train_predictions_with_feature = model_with_feature.predict(X_train)\n",
-    "    test_predictions_with_feature = model_with_feature.predict(X_test)\n",
-    "    train_predictions_without_feature = model_without_feature.predict(X_train_without_feature)\n",
-    "    test_predictions_without_feature = model_without_feature.predict(X_test_without_feature)\n",
-    "\n",
-    "    # Compute the error\n",
-    "    train_error_with_feature = mean_squared_error(y_train, train_predictions_with_feature)\n",
-    "    test_error_with_feature = mean_squared_error(y_test, test_predictions_with_feature)\n",
-    "    train_error_without_feature = mean_squared_error(y_train, train_predictions_without_feature)\n",
-    "    test_error_without_feature = mean_squared_error(y_test, test_predictions_without_feature)\n",
-    "\n",
-    "    # Compute generalization error\n",
-    "    generalization_error_with_feature = test_error_with_feature - train_error_with_feature\n",
-    "    generalization_error_without_feature = test_error_without_feature - train_error_without_feature\n",
-    "\n",
-    "    all_generalization_errors_with_feature.append(generalization_error_with_feature)\n",
-    "    all_generalization_errors_without_feature.append(generalization_error_without_feature)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.00192232, 0.00365294, 0.00117994])"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x1 = np.array(all_generalization_errors_with_feature)\n",
-    "\n",
-    "x1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.00093966,  0.00041431,  0.00107503])"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x2 = np.array(all_generalization_errors_without_feature)\n",
-    "\n",
-    "x2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compute the difference\n",
-    "diff = x2 - x1\n",
-    "\n",
-    "# Perform the one-sided t-test on the difference\n",
-    "t_statistic, p_value = stats.ttest_1samp(diff, 0)\n",
-    "\n",
-    "# Since it's one-sided, we halve the p-value and change the sign of the t-statistic\n",
-    "p_value /= 2\n",
-    "t_statistic = -t_statistic if t_statistic < 0 else t_statistic\n",
-    "\n",
-    "# If your p_value is less than your alpha (commonly 0.05), \n",
-    "# and your t_statistic is positive, you can reject the null hypothesis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.08564267523749114"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.0940494428365786"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t_statistic"
+    "selected_features = sfs_tscv.get_support(indices=True)"
    ]
   },
   {
