--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,20 +84,20 @@
     "fs_methods = lasso_methods\n",
     "\n",
     "fs_methods = [\n",
-    "    # \"sfstscv_nocluster\", \n",
-    "    \"sfstscv_rollingkmeans_k5_pca\", \"sfstscv_rollingkmeans_k5_rank\",\n",
-    "    \"sfstscv_rollingkmeans_k10_pca\", \"sfstscv_rollingkmeans_k10_rank\",\n",
-    "    \"sfstscv_rollingkmeans_kauto_eigen_rank\",\n",
+    "    \"sfstscv_nocluster\", \n",
+    "    # \"sfstscv_rollingkmeans_k5_pca\", \"sfstscv_rollingkmeans_k5_rank\",\n",
+    "    # \"sfstscv_rollingkmeans_k10_pca\", \"sfstscv_rollingkmeans_k10_rank\",\n",
+    "    # \"sfstscv_rollingkmeans_kauto_eigen_rank\",\n",
     "    \"dynotears_nocluster\", \n",
-    "    \"dynotears_rollingkmeans_k5_pca\", \"dynotears_rollingkmeans_k5_rank\",\n",
-    "    \"dynotears_rollingkmeans_k10_pca\", \"dynotears_rollingkmeans_k10_rank\",\n",
-    "    \"var-lingam_rollingkmeans_k5_pca\", \"var-lingam_rollingkmeans_k5_rank\",\n",
-    "    \"var-lingam_rollingkmeans_k10_pca\", \"var-lingam_rollingkmeans_k10_rank\",\n",
-    "    \"multivariate-granger_rollingkmeans_k5_pca\", \"multivariate-granger_rollingkmeans_k5_rank\",\n",
-    "    \"multivariate-granger_rollingkmeans_k10_pca\", \"multivariate-granger_rollingkmeans_k10_rank\",\n",
-    "    \"pairwise-granger_nocluster\",\n",
-    "    \"pairwise-granger_rollingkmeans_k5_pca\", \"pairwise-granger_rollingkmeans_k5_rank\",\n",
-    "    \"pairwise-granger_rollingkmeans_k10_pca\", \"pairwise-granger_rollingkmeans_k10_rank\"\n",
+    "    # \"dynotears_rollingkmeans_k5_pca\", \"dynotears_rollingkmeans_k5_rank\",\n",
+    "    # \"dynotears_rollingkmeans_k10_pca\", \"dynotears_rollingkmeans_k10_rank\",\n",
+    "    # \"var-lingam_rollingkmeans_k5_pca\", \"var-lingam_rollingkmeans_k5_rank\",\n",
+    "    # \"var-lingam_rollingkmeans_k10_pca\", \"var-lingam_rollingkmeans_k10_rank\",\n",
+    "    # \"multivariate-granger_rollingkmeans_k5_pca\", \"multivariate-granger_rollingkmeans_k5_rank\",\n",
+    "    # \"multivariate-granger_rollingkmeans_k10_pca\", \"multivariate-granger_rollingkmeans_k10_rank\",\n",
+    "    # \"pairwise-granger_nocluster\",\n",
+    "    # \"pairwise-granger_rollingkmeans_k5_pca\", \"pairwise-granger_rollingkmeans_k5_rank\",\n",
+    "    # \"pairwise-granger_rollingkmeans_k10_pca\", \"pairwise-granger_rollingkmeans_k10_rank\"\n",
     "    ]\n",
     "\n",
     "metric_names = [\"mse\", \"mae\", \"mse_crisis\", \"mae_crisis\"] # [\"stability\", \"mse\", \"mae\", \"mse_crisis\", \"mae_crisis\"]\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +238,175 @@
    "source": [
     "## Boxplots with summary statistics"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fs</th>\n",
+       "      <th>etf</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sfstscv_nocluster</td>\n",
+       "      <td>XLE</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>2.014214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sfstscv_nocluster</td>\n",
+       "      <td>XLK</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>3.079305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sfstscv_nocluster</td>\n",
+       "      <td>XLF</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>1.888717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sfstscv_nocluster</td>\n",
+       "      <td>SPY</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>1.433789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sfstscv_nocluster</td>\n",
+       "      <td>XLY</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>1.133138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>dynotears_nocluster</td>\n",
+       "      <td>XLY</td>\n",
+       "      <td>stability</td>\n",
+       "      <td>4.233480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>dynotears_nocluster</td>\n",
+       "      <td>XLU</td>\n",
+       "      <td>stability</td>\n",
+       "      <td>6.907489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>dynotears_nocluster</td>\n",
+       "      <td>XLB</td>\n",
+       "      <td>stability</td>\n",
+       "      <td>4.634361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>dynotears_nocluster</td>\n",
+       "      <td>XLV</td>\n",
+       "      <td>stability</td>\n",
+       "      <td>4.354626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>dynotears_nocluster</td>\n",
+       "      <td>XLP</td>\n",
+       "      <td>stability</td>\n",
+       "      <td>4.687225</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>95 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     fs  etf   variable     value\n",
+       "0     sfstscv_nocluster  XLE        mse  2.014214\n",
+       "1     sfstscv_nocluster  XLK        mse  3.079305\n",
+       "2     sfstscv_nocluster  XLF        mse  1.888717\n",
+       "3     sfstscv_nocluster  SPY        mse  1.433789\n",
+       "4     sfstscv_nocluster  XLY        mse  1.133138\n",
+       "..                  ...  ...        ...       ...\n",
+       "90  dynotears_nocluster  XLY  stability  4.233480\n",
+       "91  dynotears_nocluster  XLU  stability  6.907489\n",
+       "92  dynotears_nocluster  XLB  stability  4.634361\n",
+       "93  dynotears_nocluster  XLV  stability  4.354626\n",
+       "94  dynotears_nocluster  XLP  stability  4.687225\n",
+       "\n",
+       "[95 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "melted_all_metrics_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['mse', 'mae', 'mse_crisis', 'mae_crisis', 'stability'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "melted_all_metrics_df[\"variable\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
