--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,10 +42,10 @@
     "# }\n",
     "\n",
     "fs_methods = [\n",
-    "    \"sfstscv-lin_nocluster\", \n",
-    "    \"dynotears_nocluster\", \n",
-    "    \"pairwise-granger_nocluster\",\n",
-    "    \"multivariate-granger_nocluster\",\n",
+    "    # \"sfstscv-lin_nocluster\", \n",
+    "    # \"dynotears_nocluster\", \n",
+    "    # \"pairwise-granger_nocluster\",\n",
+    "    # \"multivariate-granger_nocluster\",\n",
     "    \"var-lingam_rollingkmeans_k5_rank\",\n",
     "    ]\n",
     "\n",
@@ -71,9 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "No results files found for var-lingam_rollingkmeans_k5_rank",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m results_files \u001b[38;5;241m=\u001b[39m glob\u001b[38;5;241m.\u001b[39mglob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(outputs_path, fs, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124metfs_macro_large\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.pickle\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(results_files) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 16\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo results files found for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# load results files\u001b[39;00m\n\u001b[1;32m     19\u001b[0m stability \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mException\u001b[0m: No results files found for var-lingam_rollingkmeans_k5_rank"
+     ]
+    }
+   ],
    "source": [
     "warnings.simplefilter(\"ignore\")\n",
     "\n",
