--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,8 @@
     "# }\n",
     "\n",
     "fs_methods = [\n",
-    "    # \"sfstscv-lin_nocluster\",\n",
+    "    \"lasso1_nocluster\",\n",
+    "    \"sfstscv-lin_nocluster\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k5_rank\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k10_rank\",\n",
     "    # \"dynotears_nocluster\",\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,12 +209,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "KeyError",
-     "evalue": "'sfstscv-lin_nocluster'",
+     "evalue": "'dynotears_rollingkmeans_k5_rank'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -223,13 +224,13 @@
       "File \u001b[0;32m~/opt/anaconda3/envs/cml-fin/lib/python3.8/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'sfstscv-lin_nocluster'",
+      "\u001b[0;31mKeyError\u001b[0m: 'dynotears_rollingkmeans_k5_rank'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 29\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# etf_rolling_metrics_df = all_rolling_metrics_df.loc[(all_rolling_metrics_df[\"etf\"] == etf)&(all_rolling_metrics_df[\"variable\"]==\"rolling_mse\")&(all_rolling_metrics_df[\"fs\"].isin(selected_models))].pivot_table(index=[\"date\"], columns=[\"fs\"], values=[\"value\"])\u001b[39;00m\n\u001b[1;32m     28\u001b[0m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mdroplevel()\n\u001b[0;32m---> 29\u001b[0m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSFS-Linear minus Dynotears\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43metf_rolling_metrics_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msfstscv-lin_nocluster\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m-\u001b[39m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdynotears_rollingkmeans_k5_rank\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     30\u001b[0m etf_rolling_metrics_df \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39mrename_fs)\n\u001b[1;32m     32\u001b[0m  \u001b[38;5;66;03m# Plotting\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[4], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# etf_rolling_metrics_df = all_rolling_metrics_df.loc[(all_rolling_metrics_df[\"etf\"] == etf)&(all_rolling_metrics_df[\"variable\"]==\"rolling_mse\")&(all_rolling_metrics_df[\"fs\"].isin(selected_models))].pivot_table(index=[\"date\"], columns=[\"fs\"], values=[\"value\"])\u001b[39;00m\n\u001b[1;32m     29\u001b[0m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mdroplevel()\n\u001b[0;32m---> 30\u001b[0m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSFS-Linear minus Dynotears\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msfstscv-lin_nocluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[43metf_rolling_metrics_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdynotears_rollingkmeans_k5_rank\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     31\u001b[0m etf_rolling_metrics_df \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39mrename_fs)\n\u001b[1;32m     33\u001b[0m  \u001b[38;5;66;03m# Plotting\u001b[39;00m\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/cml-fin/lib/python3.8/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/cml-fin/lib/python3.8/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'sfstscv-lin_nocluster'"
+      "\u001b[0;31mKeyError\u001b[0m: 'dynotears_rollingkmeans_k5_rank'"
      ]
     }
    ],
@@ -237,7 +238,8 @@
     "# SPY, XLP, XLK, XLY, XLF, XLB, XLI \n",
     "\n",
     "selected_models = [\n",
-    "   # \"sfstscv-lin_nocluster\",\n",
+    "   \"lasso1_nocluster\",\n",
+    "   \"sfstscv-lin_nocluster\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k5_rank\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k10_rank\",\n",
     "    # \"dynotears_nocluster\",\n",
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +414,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>lasso1_nocluster</th>\n",
+       "      <td>11.40</td>\n",
+       "      <td>13.81</td>\n",
+       "      <td>3.65</td>\n",
+       "      <td>3.64</td>\n",
+       "      <td>19.12</td>\n",
+       "      <td>19.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>multivariate-granger_rollingkmeans_k10_rank</th>\n",
        "      <td>3.59</td>\n",
        "      <td>4.37</td>\n",
@@ -439,6 +450,15 @@
        "      <td>5.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>sfstscv-lin_nocluster</th>\n",
+       "      <td>5.74</td>\n",
+       "      <td>8.16</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>9.70</td>\n",
+       "      <td>12.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>var-lingam_rollingkmeans_k10_rank</th>\n",
        "      <td>3.49</td>\n",
        "      <td>4.38</td>\n",
@@ -461,24 +481,28 @@
        "</div>"
       ],
       "text/plain": [
-       "variable                                      mae  mae_crisis   mse  \\\n",
-       "fs                                                                    \n",
-       "multivariate-granger_rollingkmeans_k10_rank  3.59        4.37  0.24   \n",
-       "multivariate-granger_rollingkmeans_k5_rank   3.57        4.40  0.24   \n",
-       "pairwise-granger_nocluster                   3.62        4.46  0.24   \n",
-       "var-lingam_rollingkmeans_k10_rank            3.49        4.38  0.21   \n",
-       "var-lingam_rollingkmeans_k5_rank             3.49        4.38  0.21   \n",
+       "variable                                       mae  mae_crisis   mse  \\\n",
+       "fs                                                                     \n",
+       "lasso1_nocluster                             11.40       13.81  3.65   \n",
+       "multivariate-granger_rollingkmeans_k10_rank   3.59        4.37  0.24   \n",
+       "multivariate-granger_rollingkmeans_k5_rank    3.57        4.40  0.24   \n",
+       "pairwise-granger_nocluster                    3.62        4.46  0.24   \n",
+       "sfstscv-lin_nocluster                         5.74        8.16  0.94   \n",
+       "var-lingam_rollingkmeans_k10_rank             3.49        4.38  0.21   \n",
+       "var-lingam_rollingkmeans_k5_rank              3.49        4.38  0.21   \n",
        "\n",
-       "variable                                     mse_crisis  rmse  rmse_crisis  \n",
-       "fs                                                                          \n",
-       "multivariate-granger_rollingkmeans_k10_rank        0.34  4.93         5.79  \n",
-       "multivariate-granger_rollingkmeans_k5_rank         0.34  4.90         5.80  \n",
-       "pairwise-granger_nocluster                         0.32  4.87         5.69  \n",
-       "var-lingam_rollingkmeans_k10_rank                  0.34  4.54         5.84  \n",
-       "var-lingam_rollingkmeans_k5_rank                   0.34  4.53         5.84  "
+       "variable                                     mse_crisis   rmse  rmse_crisis  \n",
+       "fs                                                                           \n",
+       "lasso1_nocluster                                   3.64  19.12        19.08  \n",
+       "multivariate-granger_rollingkmeans_k10_rank        0.34   4.93         5.79  \n",
+       "multivariate-granger_rollingkmeans_k5_rank         0.34   4.90         5.80  \n",
+       "pairwise-granger_nocluster                         0.32   4.87         5.69  \n",
+       "sfstscv-lin_nocluster                              1.56   9.70        12.50  \n",
+       "var-lingam_rollingkmeans_k10_rank                  0.34   4.54         5.84  \n",
+       "var-lingam_rollingkmeans_k5_rank                   0.34   4.53         5.84  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +550,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>lasso1_nocluster</th>\n",
+       "      <td>-0.34</td>\n",
+       "      <td>21.14</td>\n",
+       "      <td>-0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>multivariate-granger_rollingkmeans_k10_rank</th>\n",
        "      <td>38.28</td>\n",
        "      <td>21.67</td>\n",
@@ -542,6 +572,12 @@
        "      <td>36.11</td>\n",
        "      <td>23.26</td>\n",
        "      <td>16.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sfstscv-lin_nocluster</th>\n",
+       "      <td>65.89</td>\n",
+       "      <td>42.19</td>\n",
+       "      <td>28.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>var-lingam_rollingkmeans_k10_rank</th>\n",
@@ -562,14 +598,16 @@
       "text/plain": [
        "variable                                     diff_mse  diff_mae  diff_rmse\n",
        "fs                                                                        \n",
+       "lasso1_nocluster                                -0.34     21.14      -0.17\n",
        "multivariate-granger_rollingkmeans_k10_rank     38.28     21.67      17.59\n",
        "multivariate-granger_rollingkmeans_k5_rank      40.27     23.39      18.43\n",
        "pairwise-granger_nocluster                      36.11     23.26      16.67\n",
+       "sfstscv-lin_nocluster                           65.89     42.19      28.80\n",
        "var-lingam_rollingkmeans_k10_rank               65.73     25.30      28.74\n",
        "var-lingam_rollingkmeans_k5_rank                66.22     25.41      28.93"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
