--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,7 @@
     "\n",
     "fs_methods = [\n",
     "    \"lasso1_nocluster\",\n",
+    "    \"lasso2_nocluster\",\n",
     "    \"sfstscv-lin_nocluster\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k5_rank\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k10_rank\",\n",
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +228,7 @@
       "\u001b[0;31mKeyError\u001b[0m: 'dynotears_rollingkmeans_k5_rank'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 30\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# etf_rolling_metrics_df = all_rolling_metrics_df.loc[(all_rolling_metrics_df[\"etf\"] == etf)&(all_rolling_metrics_df[\"variable\"]==\"rolling_mse\")&(all_rolling_metrics_df[\"fs\"].isin(selected_models))].pivot_table(index=[\"date\"], columns=[\"fs\"], values=[\"value\"])\u001b[39;00m\n\u001b[1;32m     29\u001b[0m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mdroplevel()\n\u001b[0;32m---> 30\u001b[0m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSFS-Linear minus Dynotears\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msfstscv-lin_nocluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[43metf_rolling_metrics_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdynotears_rollingkmeans_k5_rank\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     31\u001b[0m etf_rolling_metrics_df \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39mrename_fs)\n\u001b[1;32m     33\u001b[0m  \u001b[38;5;66;03m# Plotting\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[5], line 31\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# etf_rolling_metrics_df = all_rolling_metrics_df.loc[(all_rolling_metrics_df[\"etf\"] == etf)&(all_rolling_metrics_df[\"variable\"]==\"rolling_mse\")&(all_rolling_metrics_df[\"fs\"].isin(selected_models))].pivot_table(index=[\"date\"], columns=[\"fs\"], values=[\"value\"])\u001b[39;00m\n\u001b[1;32m     30\u001b[0m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mdroplevel()\n\u001b[0;32m---> 31\u001b[0m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSFS-Linear minus Dynotears\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msfstscv-lin_nocluster\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[43metf_rolling_metrics_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdynotears_rollingkmeans_k5_rank\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     32\u001b[0m etf_rolling_metrics_df \u001b[38;5;241m=\u001b[39m etf_rolling_metrics_df\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39mrename_fs)\n\u001b[1;32m     34\u001b[0m  \u001b[38;5;66;03m# Plotting\u001b[39;00m\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/cml-fin/lib/python3.8/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/cml-fin/lib/python3.8/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[0;31mKeyError\u001b[0m: 'dynotears_rollingkmeans_k5_rank'"
@@ -239,6 +240,7 @@
     "\n",
     "selected_models = [\n",
     "   \"lasso1_nocluster\",\n",
+    "   \"lasso2_nocluster\",\n",
     "   \"sfstscv-lin_nocluster\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k5_rank\",\n",
     "    # \"sfstscv-rf_rollingkmeans_k10_rank\",\n",
@@ -320,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -421,6 +423,15 @@
        "      <td>3.64</td>\n",
        "      <td>19.12</td>\n",
        "      <td>19.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lasso2_nocluster</th>\n",
+       "      <td>12.57</td>\n",
+       "      <td>14.87</td>\n",
+       "      <td>6.22</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>24.93</td>\n",
+       "      <td>19.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>multivariate-granger_rollingkmeans_k10_rank</th>\n",
@@ -484,6 +495,7 @@
        "variable                                       mae  mae_crisis   mse  \\\n",
        "fs                                                                     \n",
        "lasso1_nocluster                             11.40       13.81  3.65   \n",
+       "lasso2_nocluster                             12.57       14.87  6.22   \n",
        "multivariate-granger_rollingkmeans_k10_rank   3.59        4.37  0.24   \n",
        "multivariate-granger_rollingkmeans_k5_rank    3.57        4.40  0.24   \n",
        "pairwise-granger_nocluster                    3.62        4.46  0.24   \n",
@@ -494,6 +506,7 @@
        "variable                                     mse_crisis   rmse  rmse_crisis  \n",
        "fs                                                                           \n",
        "lasso1_nocluster                                   3.64  19.12        19.08  \n",
+       "lasso2_nocluster                                   3.77  24.93        19.40  \n",
        "multivariate-granger_rollingkmeans_k10_rank        0.34   4.93         5.79  \n",
        "multivariate-granger_rollingkmeans_k5_rank         0.34   4.90         5.80  \n",
        "pairwise-granger_nocluster                         0.32   4.87         5.69  \n",
@@ -502,7 +515,7 @@
        "var-lingam_rollingkmeans_k5_rank                   0.34   4.53         5.84  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -554,6 +567,12 @@
        "      <td>-0.34</td>\n",
        "      <td>21.14</td>\n",
        "      <td>-0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lasso2_nocluster</th>\n",
+       "      <td>-39.42</td>\n",
+       "      <td>18.29</td>\n",
+       "      <td>-22.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>multivariate-granger_rollingkmeans_k10_rank</th>\n",
@@ -599,6 +618,7 @@
        "variable                                     diff_mse  diff_mae  diff_rmse\n",
        "fs                                                                        \n",
        "lasso1_nocluster                                -0.34     21.14      -0.17\n",
+       "lasso2_nocluster                               -39.42     18.29     -22.16\n",
        "multivariate-granger_rollingkmeans_k10_rank     38.28     21.67      17.59\n",
        "multivariate-granger_rollingkmeans_k5_rank      40.27     23.39      18.43\n",
        "pairwise-granger_nocluster                      36.11     23.26      16.67\n",
@@ -607,7 +627,7 @@
        "var-lingam_rollingkmeans_k5_rank                66.22     25.41      28.93"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
