--- a/src/new_studies/chf_data_parser.ipynb
+++ b/src/new_studies/chf_data_parser.ipynb
@@ -1249,8 +1249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "9a6731f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y.to_csv(join(\"processedData\", \"chf_target.csv\"))\n",
+    "X.to_csv(join(\"processedData\", \"chf_features.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f15202a8",
    "metadata": {},
    "outputs": [],
    "source": []
