--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "outputs_path = os.path.join(os.path.dirname(os.getcwd()), \"src\", \"data\", \"outputs\")\n",
     "results_path = os.path.join(os.path.dirname(os.getcwd()), \"src\", \"data\", \"outputs\", \"results\")\n",
     "\n",
-    "des = pd.read_csv(os.path.join(os.getcwd(), 'data', 'utils', 'fredmd_description.csv'), sep=';')\n",
+    "# des = pd.read_csv(os.path.join(os.getcwd(), 'data', 'utils', 'fredmd_description.csv'), sep=';')\n",
     "\n",
     "fs_methods_tags = {}\n",
     "# fs_methods_tags = {\n",
@@ -42,11 +42,9 @@
     "# }\n",
     "\n",
     "fs_methods = [\n",
-    "    \"sfstscv-lin_nocluster\", \n",
     "    \"dynotears_nocluster\", \n",
     "    \"pairwise-granger_nocluster\",\n",
-    "    \"multivariate-granger_nocluster\",\n",
-    "    \"var-lingam_rollingkmeans_k5_rank\",\n",
+    "    \"var-lingam_nocluster\",\n",
     "    ]\n",
     "\n",
     "etfs = [\n",
@@ -71,9 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dynotears_nocluster\n",
+      "pairwise-granger_nocluster\n",
+      "var-lingam_nocluster\n"
+     ]
+    }
+   ],
    "source": [
     "warnings.simplefilter(\"ignore\")\n",
     "\n",
@@ -82,12 +90,13 @@
     "all_stability = []\n",
     "all_parents = []\n",
     "for fs in fs_methods:\n",
+    "    print(fs)\n",
     "\n",
     "    if plot_ts:\n",
     "        display(Markdown(f\"## {fs}\"))\n",
     "\n",
     "    # list results files with glob\n",
-    "    results_files = glob.glob(os.path.join(outputs_path, fs, \"etfs_macro_large\", \"*.pickle\"))\n",
+    "    results_files = glob.glob(os.path.join(outputs_path, fs, \"monetary-policy-processed\", \"*.pickle\"))\n",
     "\n",
     "    if len(results_files) == 0:\n",
     "        raise Exception(f\"No results files found for {fs}\")\n",
@@ -98,10 +107,10 @@
     "    for file in results_files:\n",
     "        etf = file.split(fs)[-1].split(\"/\")[-1].split(\"_\")[0]\n",
     "\n",
-    "        if etf not in etfs:\n",
-    "            continue\n",
-    "        else:\n",
-    "            pass\n",
+    "        # if etf not in etfs:\n",
+    "        #     continue\n",
+    "        # else:\n",
+    "        #     pass\n",
     "\n",
     "        obj = load_pickle(path=file)\n",
     "\n",
@@ -198,6 +207,132 @@
     "all_rolling_metrics_df = pd.concat(all_rolling_metrics)\n",
     "all_parents_df = pd.concat(all_parents)\n",
     "melted_all_metrics_df = all_metrics_df.reset_index().melt(id_vars=[\"fs\", \"etf\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "melted_all_metrics_df[\"crisis\"] = [val.split(\"_\")[-1] if len(val.split(\"_\")) > 1 else \"nocrisis\" for val in melted_all_metrics_df[\"variable\"] ]\n",
+    "melted_all_metrics_df[\"variable\"] = [val.split(\"_\")[0] for val in melted_all_metrics_df[\"variable\"] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"6\" halign=\"left\">value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fs</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">dynotears_nocluster</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">pairwise-granger_nocluster</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">var-lingam_nocluster</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>crisis</th>\n",
+       "      <th>crisis</th>\n",
+       "      <th>nocrisis</th>\n",
+       "      <th>crisis</th>\n",
+       "      <th>nocrisis</th>\n",
+       "      <th>crisis</th>\n",
+       "      <th>nocrisis</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>variable</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mae</th>\n",
+       "      <td>118.899338</td>\n",
+       "      <td>72.060347</td>\n",
+       "      <td>130.958934</td>\n",
+       "      <td>80.046784</td>\n",
+       "      <td>112.408679</td>\n",
+       "      <td>70.644413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mse</th>\n",
+       "      <td>294.555403</td>\n",
+       "      <td>163.025431</td>\n",
+       "      <td>343.143123</td>\n",
+       "      <td>185.322946</td>\n",
+       "      <td>237.098012</td>\n",
+       "      <td>148.179374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rmse</th>\n",
+       "      <td>171.626164</td>\n",
+       "      <td>127.681413</td>\n",
+       "      <td>185.241227</td>\n",
+       "      <td>136.133371</td>\n",
+       "      <td>153.979873</td>\n",
+       "      <td>121.728951</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       value                                         \\\n",
+       "fs       dynotears_nocluster             pairwise-granger_nocluster   \n",
+       "crisis                crisis    nocrisis                     crisis   \n",
+       "variable                                                              \n",
+       "mae               118.899338   72.060347                 130.958934   \n",
+       "mse               294.555403  163.025431                 343.143123   \n",
+       "rmse              171.626164  127.681413                 185.241227   \n",
+       "\n",
+       "                                                       \n",
+       "fs                   var-lingam_nocluster              \n",
+       "crisis      nocrisis               crisis    nocrisis  \n",
+       "variable                                               \n",
+       "mae        80.046784           112.408679   70.644413  \n",
+       "mse       185.322946           237.098012  148.179374  \n",
+       "rmse      136.133371           153.979873  121.728951  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "melted_all_metrics_df.pivot_table(index=[\"variable\"], columns=[\"fs\", \"crisis\"], values=[\"value\"])"
    ]
   },
   {
