--- a/src/results_report_forecasting.ipynb
+++ b/src/results_report_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,10 +87,19 @@
      "output_type": "stream",
      "text": [
       "seqICP_nocluster\n",
-      "dynotears_nocluster\n",
-      "pairwise-granger_nocluster\n",
-      "var-lingam_nocluster\n",
-      "sfstscv-rf_nocluster\n"
+      "dynotears_nocluster\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas.core.indexes.numeric'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 30\u001b[0m\n\u001b[1;32m     23\u001b[0m etf \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39msplit(fs)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# if etf not in etfs:\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m#     continue\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# else:\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m#     pass\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m obj \u001b[38;5;241m=\u001b[39m load_pickle(path\u001b[38;5;241m=\u001b[39mfile)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# plot predictions\u001b[39;00m\n\u001b[1;32m     33\u001b[0m predictions_df \u001b[38;5;241m=\u001b[39m obj[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpredictions\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2006-01-01\u001b[39m\u001b[38;5;124m\"\u001b[39m:]\n",
+      "File \u001b[0;32m~/Downloads/cml-fin/src/utils/conn_data.py:9\u001b[0m, in \u001b[0;36mload_pickle\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_pickle\u001b[39m(path):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 9\u001b[0m         obj \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas.core.indexes.numeric'"
      ]
     }
    ],
@@ -223,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/danieloliveira/Documents/Daniel/codes/cml-fin/src/data/outputs/seqICP_nocluster/monetary-policy-processed/ldEXME_84_100000_-1.pickle\n"
+      "/home/danielco/Downloads/cml-fin/src/data/outputs/seqICP_nocluster/monetary-policy-processed/ldEXME_84_100000_-1.pickle\n"
      ]
     }
    ],
@@ -268,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +319,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cml-fin",
+   "display_name": "cml-fin-r",
    "language": "python",
    "name": "python3"
   },
@@ -1354,7 +1363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
